--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <button>Share</button>
         </nav>
         <article>
-            <div>Your Projects</div>
+            <div class="article-title">Your Projects</div>
             <div class="card 1">
                 <div class="title">Super Cool Project</div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae, veritatis ut debitis laudantium tenetur voluptatum minus? Corporis, voluptate.</p>
@@ -107,38 +107,37 @@
             </div>
         </article>
         <aside>
-            <div>Announcments</div>
-            <div class="card Announcments">
+            <div class="card-aside-title announcments">Announcments</div>
+            <div class="card-aside announcments">
                 <div class="title">Site Maintinance</div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae, veritatis ut debitis laudantium tenetur voluptatum minus? Corporis, voluptate.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae.</p>
 
+                <hr>
                 <div class="title">Community Share Day</div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae, veritatis ut debitis laudantium tenetur voluptatum minus? Corporis, voluptate.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae.</p>
 
+                <hr>
                 <div class="title">Updated Privacy Policy</div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae, veritatis ut debitis laudantium tenetur voluptatum minus? Corporis, voluptate.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae.</p>
             </div>
 
-            <div>Trending</div>
-            <div class="card Trending">
+            <br>
+            <div class="card-aside-title trending">Trending</div>
+            <div class="card-aside trending">
                 <div class="icon"></div>
                 <div class="title">@tegan</div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae, veritatis ut debitis laudantium tenetur voluptatum minus? Corporis, voluptate.</p>
                 <p>World Peace Builder</p>
 
                 <div class="icon"></div>
                 <div class="title">@morgan</div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae, veritatis ut debitis laudantium tenetur voluptatum minus? Corporis, voluptate.</p>
                 <p>Super Cool Project</p>
 
                 <div class="icon"></div>
                 <div class="title">@kendall</div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae, veritatis ut debitis laudantium tenetur voluptatum minus? Corporis, voluptate.</p>
                 <p>Life Changing App</p>
 
                 <div class="icon"></div>
                 <div class="title">@alex</div>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure omnis amet quibusdam in obcaecati at, eum molestiae ab iusto nihil repudiandae, veritatis ut debitis laudantium tenetur voluptatum minus? Corporis, voluptate.</p>
                 <p>No Traffic Maker</p>
             </div>
         </aside>
