--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- share icon -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- notification icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <!-- cat icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 </head>
 <body>
@@ -134,21 +138,38 @@
                 search
             </span>
 
+            <!-- <button class="icon">button placeholder</button> -->
+            <input class="search-bar" type="search" name="search" id="search">
 
-            <button class="icon">button placeholder</button>
-            <input type="search" name="search" id="search">
+            <div class="blank 1"></div>
 
-            <div class="icon"></div>
-            <div class="logo"></div>
-            <div>Morgan Oakley</div>
+            <div class="icon">
+                <!-- notification icon -->
+                <span class="material-symbols-outlined hover">
+                    notifications_active
+                </span>
+            </div>
+            <div class="logo">
+                <!-- cat logo -->
+                <span class="material-symbols-outlined hover pet">
+                    pets
+                </span>
+            </div>
+            <div>Morgan Oakley (@morgan)</div>
         </header>
         <nav>
-            <div class="logo"></div>
-            <div>Hi there,</div>
-            <div>Morgan Oakley</div>
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
+            <div class="logo">
+                <!-- cat logo -->
+                <span class="material-symbols-outlined hover pet">
+                    pets
+                </span>
+            </div>
+            <!-- <div>Hi there,</div> -->
+            <div>Hi there,<br>Morgan Oakley</div>
+            <div class="blank 1"></div>
+            <button class="nav-button">New</button>
+            <button class="nav-button">Upload</button>
+            <button class="nav-button">Share</button>
         </nav>
         <article>
             <div class="article-title">Your Projects</div>
@@ -297,21 +318,46 @@
             <br>
             <div class="card-aside-title trending">Trending</div>
             <div class="card-aside trending">
-                <div class="icon"></div>
-                <div class="title">@tegan</div>
-                <p>World Peace Builder</p>
+                <div class="icon">
+                    <span class="material-symbols-outlined hover pet">
+                        pets
+                    </span>
+                </div>
+                <div class="card-aside-child-one">
+                    <div class="title">@tegan</div>
+                    <p>World Peace Builder</p>
+                </div>
 
-                <div class="icon"></div>
-                <div class="title">@morgan</div>
-                <p>Super Cool Project</p>
+                <div class="icon">
+                    <span class="material-symbols-outlined hover pet">
+                        pets
+                    </span>
+                </div>
+                <div class="card-aside-child-two">
+                    
+                    <div class="title">@morgan</div>
+                    <p>Super Cool Project</p>
+                </div>
 
-                <div class="icon"></div>
-                <div class="title">@kendall</div>
-                <p>Life Changing App</p>
+                <div class="icon">
+                    <span class="material-symbols-outlined hover pet">
+                        pets
+                    </span>
+                </div>
+                <div class="card-aside-child-three">
+                    <div class="title">@kendall</div>
+                    <p>Life Changing App</p>
+                </div>
 
-                <div class="icon"></div>
-                <div class="title">@alex</div>
-                <p>No Traffic Maker</p>
+                <div class="icon">
+                    <span class="material-symbols-outlined hover pet">
+                        pets
+                    </span>
+                </div>
+                <div class="card-aside-child-four">
+                    <div class="title">@alex</div>
+                    <p>No Traffic Maker</p>
+                </div>
             </div>
         </aside>
     </div>
